# TeeOS

./: CMakeLists.txt  LICENSE  driver.c  driver.h  gdt.c  gdt.h  interrupts.c  interrupts.h  interruptstubs.s  kernel.c  keyboard.c  keyboard.h  linker.ld  makefile  mouse.c  mouse.h  port.c  port.h  types.h
include/: gdt.h
include/common/: graphicscontext.h  types.h
include/drivers/: driver.h  keyboard.h  mouse.h  vga.h
include/gui/: desktop.h  widget.h  window.h
include/hardwarecommunication/: interrupts.h  pci.h  port.h
iso/boot/grub/: grub.cfg
src/: gdt.c  interruptstubs.s  kernel.c  loader.s
src/drivers/: driver.c  keyboard.c  mouse.c  vga.c
src/gui/: desktop.c  widget.c  window.c
src/hardwarecommunication/: interrupts.c  pci.c  port.c
